--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,8 @@ regex = "1.10"
 anyhow = "1.0"
 lazy_static = "1.4"
 indexmap = { version = "2.0", features = ["serde"] }
+
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
